--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -62,6 +62,10 @@
               <a href="{% url 'anvil_consortium_manager:accounts:import' %}" class="icon-link">Import an account</a>
               <span class="fa-solid fa-angle-right"></span>
             </li>
+            <li class ="list-group-item">
+              <a href="{% url 'anvil_consortium_manager:accounts:link_account' %}" class="icon-link">Link an account</a>
+              <span class="fa-solid fa-angle-right"></span>
+            </li>
           </ul>
         </div>
       </div>
