--- a/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/index.html
@@ -125,4 +125,15 @@
   </div>
 </div>
 
+
+<div class="container">
+  <footer class="py-5">
+
+    <div class="d-flex flex-column flex-sm-row justify-content-between py-4 my-4 border-top">
+      <p class="text-muted">© 2022 Adrienne Stilp</p>
+      <p class="text-muted">AnVIL Consortium Manager v{{ app_version }}</p>
+    </div>
+  </footer>
+</div>
+
 {% endblock content %}
