Alert wording change for unverified accounts

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -24,7 +24,7 @@
 
 {% if not object.date_verified %}
   <div class="my-3 alert alert-dark" role="alert">
-  This account is unverified. Check your email for a verification link.
+  This account is unverified.
   </div>
 {% endif %}
 
