Use a UUID field instead of encoded pk for verification urls
Add a UUID field to the UserEmailEntry model. Use that field instead
of the encoded pk when generating a token and creating the
verification link to email.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_verification_email.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_verification_email.html
@@ -1,5 +1,5 @@
 {% autoescape off %}
 Hi {{ user.username }},
 
-Please click on the link to verify your email,  http://{{ domain }}{% url 'anvil_consortium_manager:accounts:verify' uidb64=uid token=token %}
+Please click on the link to verify your email,  http://{{ domain }}{% url 'anvil_consortium_manager:accounts:verify' uuid=uuid token=token %}
 {% endautoescape %}
