Add AnVIL Consortium Manager to the email verification template

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_verification_email.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_verification_email.html
@@ -1,5 +1,7 @@
 {% autoescape off %}
 Hi {{ user.username }},
 
-Please click on the link to verify your email,  http://{{ domain }}{% url 'anvil_consortium_manager:accounts:verify' uuid=uuid token=token %}
+Please click on the link to verify your email for AnVIL Consortium Manager:
+
+http://{{ domain }}{% url 'anvil_consortium_manager:accounts:verify' uuid=uuid token=token %}
 {% endautoescape %}
