Pass the url to the template instead of constructing it
Create the url in the send_verification_email method instead of
constructing it in the template from the uuid and token.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_verification_email.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_verification_email.html
@@ -3,5 +3,5 @@ Hi {{ user.username }},
 
 Please click on the link to verify your email for AnVIL Consortium Manager:
 
-http://{{ domain }}{% url 'anvil_consortium_manager:accounts:verify' uuid=uuid token=token %}
+{{ verification_link }}
 {% endautoescape %}
