Add a "home" url for the demo site

--- a/example_site/templates/base.html
+++ b/example_site/templates/base.html
@@ -46,7 +46,7 @@
 
     <nav class="navbar navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'anvil_consortium_manager:index' %}">Demo site</a>
+        <a class="navbar-brand" href="{% url 'home' %}">Demo site</a>
 
         <!-- Login links -->
         <ul class="navbar-nav  mb-2 ms-md-auto">
