--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -1,3 +1,6 @@
+<!-- Only include the ACM navbar if the user has view permission.-->
+{% if perms.anvil_consortium_manager.anvil_project_manager_view %}
+
   <nav id="nav-acm" class="navbar navbar-expand-lg navbar-light" aria-label="AnVIL Consortium Manager navbar">
     <div class="container">
 
@@ -105,3 +108,4 @@
       </div>
     </div>
   </nav>
+{% endif %}
