small wording change to View groups that this group is in

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_detail.html
@@ -77,7 +77,7 @@
         <h2 class="accordion-header" id="headingParents">
           <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseParents" aria-expanded="false" aria-controls="collapseParents">
             <span class="fa-solid fa-code-fork mx-2" data-fa-transform="flip-v"></span>
-            View group Parents
+            View groups that this group is in
             <span class="badge mx-2 bg-secondary pill"> {{ parent_table.rows|length }}</span>
           </button>
         </h2>
