--- a/anvil_consortium_manager/templates/anvil_consortium_manager/audit.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/audit.html
@@ -22,6 +22,10 @@
 </div>
 {% endif %}
 
+<div class="my-3 p-3 bg-light border rounded shadow-sm">
+  {% block audit_explanation %}
+  {% endblock audit_explanation %}
+</div>
 
 {% block verified_table %}
 <div class="my-3">
