--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billing_project_audit.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billing_project_audit.html
@@ -4,3 +4,27 @@
 {% block main_header %}
 <h1>Billing Project audit results</h1>
 {% endblock main_header %}
+
+{% block audit_explanation %}
+<p>
+  Only billing projects where the app is a user are verified in the audit.
+  A billing project is considered to be "Verified" if the following are true:
+</p>
+
+<ol>
+  <li>The billing project has the app service account as a user.</li>
+</ol>
+
+
+<p>
+  Otherwise, one or more errors will be reported for that managed group in the "Errors" table.
+</p>
+
+<p>
+  The audit does not check if there are billing projects that have not been imported into AnVIL but have the app as a user.
+</p>
+
+{% endblock audit_explanation %}
+
+{% block not_in_app %}
+{% endblock not_in_app %}
