--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -31,6 +31,9 @@
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:billing_projects:import' %}">Import a billing project</a>
               </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:billing_projects:audit' %}">Audit billing projects</a>
+              </li>
             </ul>
           </li>
 
@@ -44,6 +47,9 @@
               </li>
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:accounts:import' %}">Import an account</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:accounts:audit' %}">Audit accounts</a>
               </li>
             </ul>
           </li>
@@ -70,6 +76,9 @@
               </li>
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:group_group_membership:new' %}">Add a group to a group</a>
+              </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:managed_groups:audit' %}">Audit groups</a>
               </li>
 
             </ul>
@@ -98,6 +107,11 @@
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_access:list' %}">Workspace access</a>
               </li>
+
+              <li>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:audit' %}">Audit workspaces</a>
+              </li>
+
             </ul>
           </li>
 
