--- a/anvil_consortium_manager/templates/anvil_consortium_manager/audit.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/audit.html
@@ -3,13 +3,13 @@
 {% load tz %}
 {% load render_table from django_tables2 %}
 
-{% block title %}Audit Managed Groups{% endblock %}
+{% block title %}
+{% endblock %}
 
 
 {% block content %}
 
 {% block main_header %}
-<h1>Audit results</h1>
 {% endblock main_header %}
 
 {% if audit_ok %}
