Various bug fixes
Always compare lowercase emails. Remove the service account as a
member when auditing group membership -- sometime it is also listed
as a member. Do not require that the service account is a direct
owner of a workspace -- in some cases, it is part of a group that is
the owner.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -60,6 +60,9 @@
 
 
 <p>
+  <a href="{% url 'anvil_consortium_manager:workspaces:audit_access' billing_project_slug=object.billing_project.name workspace_slug=object.name %}" class="btn btn-primary" role="button">Audit membership</a>
+</p>
+<p>
   <a href="{% url 'anvil_consortium_manager:workspaces:delete' billing_project_slug=object.billing_project.name workspace_slug=object.name %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 </p>
 
