--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_access_audit.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_access_audit.html
@@ -13,8 +13,8 @@
   <ul>
     <li>Each group that has access in the app must also have access in AnVIL.</li>
     <li>Each group that has access in the app has the same access in AnVIL.</li>
-    <li>The "can_compute" value is the same in the app an on AnVIL.</li>
-    <li>The "can_share" value is the same in the app an on AnVIL.</li>
+    <li>The "can_compute" value is the same in the app and on AnVIL.</li>
+    <li>The "can_share" value is the same in the app and on AnVIL.</li>
   </ul>
 
 </p>
