Add inline javascript to workspace import template
This allows projects using this app to use an autocomplete view
to select foreign keys in both the workspace create view (which
already has the inline_javascript block) and the workspace import
view (which did not have this block).

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
@@ -13,3 +13,8 @@
     <button type="submit" class="btn btn-success">Import workspace</button>
   </form>
 {% endblock %}
+
+
+{% block inline_javascript %}
+  {{ form.media }}
+{% endblock inline_javascript %}
