Add a link to share a workspace with a group to navbar

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -107,6 +107,9 @@
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_access:list' %}">Workspace access</a>
               </li>
+              <li>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_access:new' %}">Give a group access to a workspace</a>
+              </li>
 
               <li>
                 <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspaces:audit' %}">Audit workspaces</a>
