Do not show delete etc links on AccountDetail for view users
Only users with edit permission should see the links to delete,
deactivate, or reactivate an Account. Add a flag in the context
to check if the user has edit permission, and then only show the
links if it is true.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_detail.html
@@ -61,6 +61,7 @@
 </div>
 
 
+{% if show_edit_links %}
 <p>
   {% if show_deactivate_button %}
     <a href="{% url 'anvil_consortium_manager:accounts:deactivate' uuid=object.uuid %}" class="btn btn-secondary" role="button">Deactivate account</a>
@@ -72,5 +73,6 @@
 
   <a href="{% url 'anvil_consortium_manager:accounts:delete' uuid=object.uuid %}" class="btn btn-danger" role="button">Delete from app</a>
 </p>
+{% endif %}
 
 {% endblock content %}
