Only show delete button if edit permission on detail pages
As with the AccountDetail page, modify all the other detail pages
to only show delete/update/etc buttons when the user has edit
permission to see those links. Add tests to verify.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_detail.html
@@ -16,8 +16,10 @@
   </ul>
 </div>
 
+{% if show_edit_links %}
 <p>
   <a href="{% url 'anvil_consortium_manager:managed_groups:member_accounts:delete' group_slug=object.group.name account_uuid=object.account.uuid %}" class="btn btn-danger" role="button">Delete on AnVIL</a>
 </p>
+{% endif %}
 
 {% endblock content %}
