--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_update.html
@@ -2,11 +2,11 @@
 {% load crispy_forms_tags %}
 {% load static %}
 
-{% block title %}Workspace group access: {{ object }}{% endblock %}
+{% block title %}Workspace group sharing: {{ object }}{% endblock %}
 
 {% block content %}
 
-  <h2>Modify Workspace Group Access</h2>
+  <h2>Modify Workspace Group Sharing</h2>
 
   <ul>
     <li>Workspace: {{ object.workspace }}</li>
@@ -17,7 +17,7 @@
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Save access</button>
+    <button type="submit" class="btn btn-success">Save</button>
   </form>
 
 {% endblock content %}
