Revert "Rename model to WorkspaceGroupSharing"
This reverts commits a51d32dade6dadb94a11b8c02d563c314f3f53db
through ded7ca9f9c4de31a42bbb4a023cbff6083b04f53. There is a bug
in Django when creating a migration in MySQL involving indexes,
which was triggered by the model renaming. It has been fixed, but
it is not in the most recent Django 3.2 LTS release (3.2.16).

https://code.djangoproject.com/ticket/31335

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/navbar.html
@@ -122,11 +122,11 @@
               {% endfor %}
 
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_sharing:list' %}">Workspace sharing</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_access:list' %}">Workspace access</a>
               </li>
               {% if perms.anvil_consortium_manager.anvil_project_manager_edit %}
               <li>
-                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_sharing:new' %}">Share a workspace with a group</a>
+                <a class="dropdown-item" href="{% url 'anvil_consortium_manager:workspace_group_access:new' %}">Give a group access to a workspace</a>
               </li>
               {% endif %}
 
