--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_access_audit.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_access_audit.html
@@ -1,18 +1,18 @@
 {% extends "anvil_consortium_manager/audit.html" %}
-{% block title %}Audit Workspace sharing{% endblock %}
+{% block title %}Audit Workspace access{% endblock %}
 
 {% block main_header %}
-<h1>Workspace sharing audit results</h1>
+<h1>Workspace access audit results</h1>
 <h3>for <a href="{{ object.get_absolute_url }}">{{ object }}</a></h3>
 {% endblock main_header %}
 
 {% block audit_explanation %}
 
 <p>
-  Each sharing record for a managed workspace is considered to be "Verified" if the following are true:
+  Each access record for a managed workspace is considered to be "Verified" if the following are true:
   <ul>
-    <li>The workspace is shared with the group on AnVIL.</li>
-    <li>The group that the workspace is shared with in the app has the same access in AnVIL.</li>
+    <li>Each group that has access in the app must also have access in AnVIL.</li>
+    <li>Each group that has access in the app has the same access in AnVIL.</li>
     <li>The "can_compute" value is the same in the app and on AnVIL.</li>
     <li>The "can_share" value is the same in the app and on AnVIL.</li>
   </ul>
