--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_form.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupaccess_form.html
@@ -2,15 +2,15 @@
 {% load static %}
 {% load crispy_forms_tags %}
 
-{% block title %}New Workspace Group Sharing{% endblock title %}
+{% block title %}New Workspace Group Access{% endblock title %}
 
 {% block content %}
-  <h2>New Workspace Group Sharing</h2>
+  <h2>New Workspace Group Access</h2>
 
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Save</button>
+    <button type="submit" class="btn btn-success">Save access</button>
   </form>
 {% endblock %}
 
