--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_form_bygroup.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_form_bygroup.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <h2>Add an account to Managed Group {{ group }}</h2>
+  <h2>Add an Account to {{ group }}</h2>
 
   <form method="post">
     {% csrf_token %}
