--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_form_bychild.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_form_bychild.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-  <h2>Add {{ child_group }} to a group</h2>
+  <h2>Add {{ child_group }} to a Managed Group</h2>
 
   <form method="post">
     {% csrf_token %}
