--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_form_byparent.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupgroupmembership_form_byparent.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h2>Add a group to {{ parent_group }}</h2>
+<h2>Add a Managed Group to {{ parent_group }}</h2>
 
   <form method="post">
     {% csrf_token %}
