--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_byworkspace.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_byworkspace.html
@@ -5,7 +5,7 @@
 {% block title %}New Workspace Group Sharing{% endblock title %}
 
 {% block content %}
-  <h2>Share Workspace {{workspace}} with a Managed Group</h2>
+  <h2>Share {{workspace}} with a Managed Group</h2>
 
 <p></p>
 
