--- a/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_form_byaccount.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/groupaccountmembership_form_byaccount.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 
-<h2>Add Account {{ account }} to a Managed Group</h2>
+<h2>Add {{ account }} to a Managed Group</h2>
 
   <form method="post">
     {% csrf_token %}
