--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_bygroup.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_bygroup.html
@@ -5,7 +5,7 @@
 {% block title %}New Workspace Group Sharing{% endblock title %}
 
 {% block content %}
-  <h2>Share a Workspace with Managed Group {{ group }}</h2>
+  <h2>Share a Workspace with {{ group }}</h2>
 
 <p></p>
 
