--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_byworkspacegroup.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspacegroupsharing_form_byworkspacegroup.html
@@ -5,7 +5,7 @@
 {% block title %}New Workspace Group Sharing{% endblock title %}
 
 {% block content %}
-  <h2>Share Workspace {{workspace}} with Managed Group {{group}}</h2>
+  <h2>Share {{workspace}} with {{group}}</h2>
 
 <p></p>
 
