--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_detail.html
@@ -23,6 +23,7 @@
     <li>Billing project: {{ object.billing_project }}</li>
     <li>Date added: {{ object.created }}</li>
     <li>Date modified: {{ object.modified }}</li>
+    <li>Note: {{ object.note }}</li>
   </ul>
 </div>
 {% endblock workspace_data %}
