--- a/example_site/templates/app/example_workspace_detail.html
+++ b/example_site/templates/app/example_workspace_detail.html
@@ -5,6 +5,7 @@
   <ul>
     <li>Study: {{ object.exampleworkspacedata.study_name }}</li>
     <li>Consent: {{ object.exampleworkspacedata.consent_code }}</li>
+    <li>Note: {{ object.note }}</li>
   </ul>
 </div>
 {% endblock workspace_data %}
