Allow updating of BillingProjects
Add a form and a view to update the notes for a billing project.
Note that the name cannot be changed.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/billingproject_detail.html
@@ -44,4 +44,9 @@
 </div>
 
 
+{% if show_edit_links %}
+<a href="{% url 'anvil_consortium_manager:billing_projects:update' slug=object.name %}" class="btn btn-secondary" role="button">Update information</a>
+</p>
+{% endif %}
+
 {% endblock content %}
