Use consistent submit button text for all update views

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_update.html
@@ -13,7 +13,7 @@
     {{ workspace_data_formset|crispy }}
     {{ form|crispy }}
 
-    <button type="submit" class="btn btn-success">Save workspace</button>
+    <button type="submit" class="btn btn-success">Save</button>
   </form>
 {% endblock %}
 
