--- a/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_update.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/managedgroup_update.html
@@ -9,6 +9,6 @@
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Save group</button>
+    <button type="submit" class="btn btn-success">Save</button>
   </form>
 {% endblock %}
