Use consistent text in import templates
Name the templates *_import.html, add a consistent header, and use
consistent submit button text.

--- a/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/workspace_import.html
@@ -3,7 +3,7 @@
 
 {% block title %}Import Workspace{% endblock title %}
 
-<h2>Import a workspace from AnVIL</h2>
+<h2>Import an existing workspace from AnVIL</h2>
 
 {% block content %}
   <form method="post">
