--- a/anvil_consortium_manager/templates/anvil_consortium_manager/account_import.html
+++ b/anvil_consortium_manager/templates/anvil_consortium_manager/account_import.html
@@ -4,9 +4,12 @@
 {% block title %}New Account{% endblock title %}
 
 {% block content %}
+
+<h2>Import an existing account from AnVIL</h2>
+
   <form method="post">
     {% csrf_token %}
     {{ form|crispy }}
-    <button type="submit" class="btn btn-success">Save account</button>
+    <button type="submit" class="btn btn-success">Import account</button>
   </form>
 {% endblock %}
